src/directives/ccSelectBox/ccselectbox.scss
%cc-select-box__native-select{
    opacity: 0;
    position: absolute;
    left: 0;
    top: 0;
    bottom: 0;
    width: 100%;
    height: 100%;
    -webkit-appearance: none;
}

%cc-select-box__select-icon{
    position: absolute;
    right: 10px;
    top: 50%;
    font-size: 24px;
    margin-top: -12px;
}


@mixin cc-select-box($cc-select-box__name,
                     $cc-select-box__modifier,
                     $cc-select-box__background,
                     $cc-select-box__color,
                     $cc-select-box__font-size,
                     $cc-select-box__height,
                     $cc-select-box__border-radius,
                     $cc-select-box__border-color,
                     $cc-select-box__border-bottom-width){



    .#{$cc-select-box__name}#{$cc-select-box__modifier}{
        position: relative;
        width: 100%;
        height: $cc-select-box__height;
        line-height: $cc-select-box__height;
        text-align: center;
        border-radius: $cc-select-box__border-radius;
        margin: 0 0 5px 0;
        background: $cc-select-box__background;
        border-style: solid;
        border-width: 0;
        border-color: $cc-select-box__border-color;

        border-top-width: $cc-select-box__border-top-width;
        border-right-width: $cc-select-box__border-right-width;
        border-left-width: $cc-select-box__border-left-width;

        //android 2.3 needs blur for box shadow
        -webkit-box-shadow: 0 $cc-select-box__border-bottom-width 1px 0 $cc-select-box__border-color;
        box-shadow: 0 $cc-select-box__border-bottom-width 0 0 $cc-select-box__border-color;


        //no need to duplicate styles if there is nothing dynamic at all, hence the @extend!
        .#{$cc-select-box__name}__select-icon{
            @extend %cc-select-box__select-icon;
            color: $cc-select-box__color
        }

        //no need to duplicate styles if there is nothing dynamic at all, hence the @extend!
        .#{$cc-select-box__name}__native-select{
            @extend %cc-select-box__native-select;
        }

        .#{$cc-select-box__name}__display-value{
            font-size: $cc-select-box__font-size;
            color: $cc-select-box__color;
        }

    }

    .#{$cc-select-box__name}#{$cc-select-box__modifier}.ng-invalid.ng-dirty{
        margin-bottom: 50px;

        .cc-validation__message--fail{
            display: inline-block;
            line-height: 1;
            position: absolute;
            left: 5px;
            top: $cc-select-box__height;
        }
    }
}

